updating changes for publishing to queu
