# api/controllers/car_operations.js
@@ -1,5 +1,5 @@
 const { Client } = require('pg');
-const queHelper = require('../helpers/publishJob');
+const queHelper = require('../helpers/publishMessageToQueue');
 
 const client = new Client({ connectionString: process.env.DATABASE_URL });
 let connected = false;
@@ -20,26 +20,36 @@ const checkConnection = async() =>{
 Adding the new car to the Database
 */
 const registerCar = (req, res) => {
-//return new Promise(function(resolve, reject) {
 var name = req.body.name;
 var make = req.body.make;
 let values = [name,make];
 checkConnection().then(async() => {
    const vv = await client.query('INSERT INTO cars (name,make) VALUES ($1,$2) returning * ',values);
    console.log(vv.rows[0])
-   await queHelper.createJob('first');
-
+   await queHelper.createJob(name,make);
         res.json({
             data:{
                 status:'success',
                 code:200,
-                details:"car Succesfully created",
+                details:`Car Succesfully registered with Id DMI_INDY_${vv.rows[0].id}`,
             }
-    
           })
-    
-
 });
 }; 
  
-module.exports = {  registerCar }; 
+const fetchAllCars = (req, res) => {
+
+  checkConnection().then(async() => {
+     const vv = await client.query('select * from cars ');
+     console.log(vv.rows)
+          res.json({
+              data:{
+                  status:'List of all Cars',
+                  code:200,
+                  details:vv.rows,
+              }
+      
+            })
+  });
+  }; 
+module.exports = {  registerCar,fetchAllCars }; 
