# api/swagger/swagger.yaml
@@ -18,19 +18,13 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
+  /getAllCars:
     # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
+    x-swagger-router-controller: car_operations
     get:
-      description: Returns 'Hello' to the caller
+      description: Returns all cars to the caller
       # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
+      operationId: fetchAllCars
       responses:
         "200":
           description: Success
